crates/tap-agent/src/agent/snapshots/indexer_tap_agent__agent__sender_allocation__tests__close_allocation_no_pending_fees.snap
---
source: crates/tap-agent/src/agent/sender_allocation.rs
expression: message_receiver.recv().await
---
Some(
    UpdateReceiptFees(
        0xfa44c72b753a66591f241c7dc04e8178c30e13af,
        UpdateValue(
            UnaggregatedReceipts {
                value: 0,
                last_id: 0,
                counter: 0,
            },
        ),
    ),
)
