crates/tap-agent/src/agent/snapshots/indexer_tap_agent__agent__sender_allocation__tests__execute.snap
---
source: crates/tap-agent/src/agent/sender_allocation.rs
expression: startup_msg
---
UpdateReceiptFees(
    0xfa44c72b753a66591f241c7dc04e8178c30e13af,
    UpdateValue(
        UnaggregatedReceipts {
            value: 499500,
            last_id: 1000,
            counter: 1000,
        },
    ),
)
