crates/tap-agent/src/agent/snapshots/indexer_tap_agent__agent__sender_allocation__tests__should_return_invalid_receipts_on_startup-2.snap
---
source: crates/tap-agent/src/agent/sender_allocation.rs
expression: last_message_emitted
---
UpdateReceiptFees(
    Legacy(
        0xfa44c72b753a66591f241c7dc04e8178c30e13af,
    ),
    UpdateValue(
        UnaggregatedReceipts {
            value: 0,
            last_id: 0,
            counter: 0,
        },
    ),
)
