crates/tap-agent/src/agent/snapshots/indexer_tap_agent__agent__sender_allocation__tests__trigger_rav_request-2.snap
---
source: crates/tap-agent/src/agent/sender_allocation.rs
expression: msg
---
UpdateInvalidReceiptFees(
    0xfa44c72b753a66591f241c7dc04e8178c30e13af,
    UnaggregatedReceipts {
        value: 45,
        last_id: 0,
        counter: 0,
    },
)
