crates/tap-agent/src/agent/snapshots/indexer_tap_agent__agent__sender_allocation__tests__trigger_rav_request-3.snap
---
source: crates/tap-agent/src/agent/sender_allocation.rs
expression: x
---
UpdateReceiptFees(
    0xfa44c72b753a66591f241c7dc04e8178c30e13af,
    RavRequestResponse(
        UnaggregatedReceipts {
            value: 0,
            last_id: 0,
            counter: 0,
        },
        Ok(
            Some(
                RavInformation {
                    allocation_id: 0xfa44c72b753a66591f241c7dc04e8178c30e13af,
                    value_aggregate: 45,
                },
            ),
        ),
    ),
)
